fix a aling.html

--- a/align.html
+++ b/align.html
@@ -12,8 +12,8 @@
 <body class="p-5 bg-light">
 	<div class="container">
 		<div class="row justify-content-end">
-				<div class="menu bg-primary col-4 align-self-center">Float left on all viewport sizes</div>
-				<div class="main bg-dark col-4 float-right">Float right on all viewport sizes</div>
+				<div class="menu bg-primary col-4 align-self-center m-3"></div>
+				<div class="main bg-dark col-4 float-right m-3"></div>
 		</div>
 	</div>
 
