--- a/align.html
+++ b/align.html
@@ -11,8 +11,8 @@
 </head>
 <body class="p-5 bg-light">
 	<div class="container">
-		<div class="row justify-content-end">
-				<div class="menu bg-primary col-4 align-self-center m-3"></div>
+		<div class="row justify-content-end align-items-center">
+				<div class="menu bg-primary col-4 m-3"></div>
 				<div class="main bg-dark col-4 float-right m-3"></div>
 		</div>
 	</div>
