use a class col just like a grid

--- a/libros.html
+++ b/libros.html
@@ -10,7 +10,9 @@
   <div class="container">
 
     <div class="row justify-content-around">
-      <div class="card col-4 px-0">
+
+      <div class="col-4">
+        <div class="card">
         <img class="card-img-top" src="https://s3.amazonaws.com/makeitreal/challenges/bootstrap4/lean-startup-cover.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
@@ -18,13 +20,16 @@
           <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
+      </div>
 
-      <div class="card col-4 px-0">
-        <img class="card-img-top" src="https://s3.amazonaws.com/makeitreal/challenges/bootstrap4/pragmatic-programmer-cover.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Comprar</a>
+      <div class="col-4">
+        <div class="card">
+          <img class="card-img-top" src="https://s3.amazonaws.com/makeitreal/challenges/bootstrap4/pragmatic-programmer-cover.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
         </div>
       </div>
     </div>
